# python-project-demo

./: LICENSE.txt  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: new_line.md
.github/workflows/: build-wheel.yml  build.yml  careful-tests.yml  code-quality.yml  license-test.yml  publish-pypi-test.yml  publish-pypi.yml  python-tests.yml  regular-tests.yml  release.yml  sync-current.yml  test-wheels.yml  test.yml  unit-tests-multiplatform.yml  unit-tests.yml
hatch_demo_simon_bowly/: __about__.py  __init__.py
src/hatch_demo_simon_bowly/: __about__.py  __init__.py
tests/: test_simple.py
